AUTOMAKE_OPTIONS = -Wall -Werror foreign subdir-objects

lib_LTLIBRARIES = liborcdchomp.la

#liborcdchomp_la_CPPFLAGS = -std=c++98 -pedantic-errors -Wall -Werror
liborcdchomp_la_SOURCES = src/orcdchomp.cpp \
                          src/orcdchomp_mod.cpp \
                          src/orcdchomp_rdata.cpp
