<?xml version="1.0"?>
<package>
  <name>or_urdf</name>
  <version>0.0.1</version>
  <description>
    OpenRAVE plugin for loading URDF files.
  </description>
  <url type="repository">https://svn.personalrobotics.ri.cmu.edu/pr-ros-pkg/trunk/or_plugins/or_urdf</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>openrave_catkin</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>srdfdom</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>openrave_catkin</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>srdfdom</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>yaml-cpp</run_depend>
</package>
