<?xml version="1.0"?>
<package>
  <name>or_urdf</name>
  <version>0.2.0</version>
  <description>
    OpenRAVE plugin for loading URDF and SRDF files.
  </description>
  <url type="repository">https://github.com/personalrobotics/or_urdf</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="psigen@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>openrave_catkin</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>srdfdom</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>openrave_catkin</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>srdfdom</run_depend>
  <run_depend>roslib</run_depend>
</package>
